# 4letters

./: .babelrc  .eslintrc.js  .gitignore  4letters.cabal  CHANGELOG.md  Dockerfile  LICENSE  README.md  default-nix.nix  default.nix  index.js  package-lock.json  package.json  shell.nix  stack.yaml
.github/workflows/: haskell-release-dev.yml  haskell-release-main.yml  haskell-release-nightly.yml  haskell-release-prod.yml  haskell-release-tag.yml  haskell.yml  main.yml  nix.yml  nix.yml.disabled
lib/Parser/Words/: BinaryOh.hs  EnglishDigits.hs  FrenchDigits.hs
parsers/: enwords.js  frwords.js
src/: Main.hs  index.js  index.mjs
src/Parser/Words/: Binary.hs  BinaryOh.hs  BinaryOhWithSpaces.hs  BinaryWithSpaces.hs  English.hs  EnglishDigits.hs  French.hs  FrenchDigits.hs
src/parsers/: enwords.mjs  frwords.js
