cabal-version:      3.4

-- Newer versions complain
name:               4letters
version:            0.0.2
synopsis:           Inspired by Matt Parker's "Four has Four Letters"
homepage:           https://github.com/danwdart/4letters
license:            MIT
author:             Dan Dart
maintainer:         git@dandart.co.uk
category:           Math
extra-source-files: CHANGELOG.md
build-type:         Simple

library
  exposed-modules:
    Parser.Words.Binary
    Parser.Words.BinaryOh
    Parser.Words.BinaryOhWithSpaces
    Parser.Words.BinaryWithSpaces
    Parser.Words.EnglishDigits
    Parser.Words.FrenchDigits

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:
    , base        >=4.18.2.0
    , containers
    , digits

  hs-source-dirs:     lib
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations

executable 4letters
  main-is:            Main.hs
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  build-depends:
    , 4letters
    , base      >=4.18.2.0
    , extra

  hs-source-dirs:     src
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
