cabal-version:      3.14

-- Newer versions complain
name:               4letters
version:            0.2.0.0
synopsis:           Inspired by Matt Parker's "Four has Four Letters"
homepage:           https://github.com/danwdart/4letters
license:            MIT
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
category:           Math
extra-doc-files:    CHANGELOG.md
build-type:         Simple

library
  exposed-modules:
    Parser.Words.Binary
    Parser.Words.BinaryOh
    Parser.Words.BinaryOhWithSpaces
    Parser.Words.BinaryWithSpaces
    Parser.Words.EnglishDigits
    Parser.Words.FrenchDigits

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base        ^>=4.22
    , containers  ^>=0.8
    , digits      ^>=0.3.1

  hs-source-dirs:     lib

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  if !impl(wasm32)
    ghc-options: -threaded

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

executable 4letters
  main-is:            Main.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , 4letters  ^>=0.2
    , base      ^>=4.22
    , extra     ^>=1.8

  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags
